<resources>
    <string name="app_name">SQLite</string>
    <string name="jadwal_kuliah">Jadwal Kuliah</string>
    <string name="jam">Jam</string>
    <string name="menit">Menit</string>
    <string name="nama_mk">Nama MK</string>
    <string name="nama_dosen">Nama Dosen</string>
    <string name="tambah_jadwal">Tambah Jadwal</string>
    <string name="hari">Hari</string>
    <string name="update">Update</string>
    <string name="hapus">Hapus</string>
    <string name="halaman_list">Halaman List</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cth_judul">Senin</string>
    <string name="cth_waktu">09:00</string>
    <string name="cth_mk">Pemrograman Mobile</string>
    <string name="cth_namaDosen">Shumaya Resty Ramadhani</string>
</resources>