<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".repository.tambah.fragment_tambah">

    <TextView
        android:id="@+id/tx_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/jadwal_kuliah"
        android:textColor="#000"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_hari"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/hari"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tx_judul" />

    <EditText
        android:id="@+id/edt_jam"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:hint="@string/jam"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_hari" />

    <EditText
        android:id="@+id/edt_menit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:hint="@string/menit"
        android:inputType="number"
        app:layout_constraintLeft_toRightOf="@+id/edt_jam"
        app:layout_constraintTop_toBottomOf="@+id/edt_hari" />

    <EditText
        android:id="@+id/edt_nama_mk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/nama_mk"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edt_jam" />

    <EditText
        android:id="@+id/edt_nm_dosen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/nama_dosen"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/edt_nama_mk" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/tambah_jadwal"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edt_nm_dosen" />

</androidx.constraintlayout.widget.ConstraintLayout>